--- a/_posts/2018-10-06-vim-cn-im.md
+++ b/_posts/2018-10-06-vim-cn-im.md
@@ -8,14 +8,14 @@ tags:
   - Docker
 ---
 
-Update: Docker学习新的
+Update: Docker学习心得
 
 ---
 
 Docker理解:
     1.Docker是虚拟化容器,他与传统虚拟机的核心区别为:
-        虚拟机是硬件级别的虚拟化,Docker是操作系统级别的虚拟化.
-    2.使用Docker部署项目对比与传统linux服务器部署相比,有如下几点优势:
+      虚拟机是硬件级别的虚拟化,Docker是操作系统级别的虚拟化.
+    2.使用Docker部署项目对比与传统linux服务器部署相比,有如下几点优势:<br>
         (1)Docker部署项目是秒级启动,传统linux直接部署可能是几十秒甚至耗时更久.
         (2)Docker消耗系统资源非常的少,而传统部署项目的方式消耗系统资源和性能非常大.
         (3)使用Docker可以让我linux环境非常的干净,不需要linux配置很多环境(甚至不需要jdk),当我需要什么环境,
@@ -45,7 +45,7 @@ Docker一些已经熟记不需要百度的操作:
     1.之前学习Docker容器的时候就发现了一个问题,假如我所有的项目,服务,数据库等配套的东西都用docker一个一个
       build镜像,run的时候打参数非常的麻烦,但dockerfile好像只是可以写一些启动参数和docker挂载路径等,好像
       并不能解决这个问题.后面就知道了docker-compose
-
+     
       docker-compose是一个docker容器编排工具,可以解决我之前并行启动的问题,与dockerfile同一目录下,
       建立一个名为docker-compose.yml的文件,然后在其中可以将你这次要启动的所有东西都写进来,但都是基于
       docker image的,例如docker的mysql,docker的redis,docker编译好的java项目image等.
