--- a/_posts/2018-12-10-swagger2.md
+++ b/_posts/2018-12-10-swagger2.md
@@ -1,58 +1,38 @@
 ---
 layout: post
-title: "Avoiding success at all cost"
-subtitle: 'Watching "Escape from the Ivory Tower: The Haskell Journey"'
-author: "Hux"
+title: "Swagger2使用心得"
+subtitle: 'Some tips on using Swagger'
+author: "FengJiaWen"
 header-style: text
-lang: en
 tags:
-  - Haskell
-  - PL
-  - 笔记
-  - 🇬🇧
+  - Swagger2
+  - 接口文档
 ---
 
-"Avoiding success at all cost" is the informal motto behinds [Haskell](https://www.haskell.org/). It could be parenthesized in two ways, either "Avoiding (success at all cost)" or "(Avoiding sucess) (at all cost)". 
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在公司的新项目中,大家讨论到花一周的时间写接口文档,这时候我想起了之前在上个公司X总给我介绍的Swagger,
+我一直觉得非常新颖和先进,但是我当时没有机会用,这个没有人用过,我也不熟,后面来了一位新同事,他用过swagger,经<br>过一番讨论,觉得这不是一个比较难的东西,于是我就让同事给我搭出来看一下(因为项目框架是我搭建的,但是swagger2没有引入过.).他搭建出来我看了一下界面,和想象的一样,能自动根据API<br>路由动态生成接口信息以及模拟接口访问(类似于postman的效果).然后我就查了一下搭建过程,这里需要引入两个包,一个sprinfox.swagger2和一个springfox.wwagger.ui(我这边引入的是2.8.0版本 ps:个人一直喜欢用新的,老是觉得新东西界面更美观,兼容性更好).
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;搭建过程:
+1.引入jar包
+2.与springboot启动类同级建立swagger配置类,并使用@EnableSwagger2注解标记;这里面包含一些扫描Controller包的路径,一些标题、邮箱、接口信息名称、版本等等.
+3.注解:
+  目前主要使用的一些注解有:
+   1.@Api(tags = ""):Controller类描述注解.
+   2.@ApiOperation(value = " "):api方法描述注解.
+   3.@ApiImplicitParam(name="接受参数名",
+                       paramType="{
+                                   path:(浏览器地址形式取得参数例如(id,对应注解:@PathVariabl)),
+                                   query:(对应注解@RequestParam注解),
+                                   body:(对应@RequestBody注解),)
+                       dataType:参数类型(只作为标志,没有实际校验)
+                       value:对参数的描述
+                       required:是否必填
+                       defultValue:默认值.
+  4.@ApiModel(注解对象 ps:这个感觉特别好用,我可以注解我的前后端自定义返回实体(DTO),来对它进行描述,开发人员可以在swagger首页看到每个标记对象的意义)
+  5.@ApiModelProperty(注解对象属性)
 
-I'm not going to interpret them directly but rather to share some thoughts on "the success vs. costs" basing on my very own understanding and experience.
-
-### The success vs. cost of language design
-
-There're always trade offs (or compromises) in any software design, and programming language design has no exceptions.
-
-In other words, all language design decision that made them "successful" i.e. being popular and widely-used in industry or education for some reasons, all comes with their own "costs": being unsafe, limited expressiveness, or having bad performance, etc.
-
-Whether or not the "cost" is a problem really depends on scenarios, or their goals. For instances, Python/JavaScript are both very expressive and beginner-friendly by being dynamically-typed, sacrifing the type safety and performance. Java, in constrast, uses a much safer and optimization-friendly type system but being much less expressive. Another typicial comparison would be memory management in programming languages, where languages that are "managed" (by either ARC or Gabage Collector) could be much easier and safer (in terms of memory) for most programmers but also considerred slower than languages that are "closer to the metal". 
-
-None of these "costs", or "differences", really prevent them from being immortally popular.
-
-For Haskell, the story becomes quite different: being research-oriented means the goal of this language is to pursue some "ultimate" things: the "ultimate" simplicity of intermediate representation, the "ultimate" type system where safety and expressiveness can coexist, the "ultimate" compilation speed and runtime performance, the "ultimate" concise and elegant concrete syntax, the "ultimate"...I don't know. But it has to be some "ultimate" things that is very difficult, probably endless and impossible, to achieve. 
-
-This, as a result, made all language decisions in Haskell became very hard and slow, because **almost nothing can be scarified**. That's why Haskell insisted to be lazy to "guard" the purity regardless of some problems of being "call-by-need"; a decent IO mechanisms is missing in the first 4 yrs after the project's start until P Walder found _Monad_; and the _Type Class_, which is first proposed in P Walder's 1989 paper, spent yrs long to implement and popularize.
-
-As a side note though, it doesn't mean there is no compromise in Haskell at all. It's just as minimized as it could be during its progress. When one audience asking why we have Haskell and OCaml, which're quite similar in very high level, both survived, SPJ replies:
-
-> There's just a different set of compromises.
-
-### The success vs. cost of language design process
-
-Another common but extremely controversial (if not the most) topics of programming language design is about its design process: Would you prefer dictatorship or a committee (in other words, a dictatorship of many?)? Would you prefer being proprietary or standardized? In which form would you write the standards, in human nature language, pseudo code, or formal semantics? How many and how frequently breaking changes dare you make? Would you let open source community involve in?  
-
-Again, I think there is no THE answer for all those questions. Majority of popular programming languages came and are still on going with very different paths.
-
-Python, whose creater, Guido van Rossum, known as the "Benevolent Dictator For Life" (BDFL), i.e. good kind of dictator, still play the central role (until July 2018) of the Python's development after Python getting popular and adapt a open source and community-based development model. This factor direcly contribute to the fact that Python 3, as a breaking (not completely backward-compatible and not easy to port) but good (in terms of language design and consistency) revision of the language can still be landed, despite of many communities' pressures. There're many language (Ruby, Perl, Elm) also choose to follow this route.
-
-JavaScript, widely known as being created by Brendan Eich in 10 days, in comparision, quickly involved into a committee (TC39) and standardized (ECMAScript) language due to both the open nature of the Web and fast adoption of itself. But Brendan, as the creater, wasn't even powerful enough to push the committee landing ES4, which is also a breaking but much better revision, but ended up with the ES5 (Harmony), a backward-compatible, yet much less ambitious version due to many political "fights" between different parties (e.g. Mozilla, Microsoft, Yahoo etc.) thus the history wasn't changed. Even the latest rising and yearly releasing of the "modern" JavaScript (ES6 or ES2015, 2016, 2017...) are mainly driven by the new generation of committee parties (+ Google, Facebook, Airbnb etc.) and still in a very open and standardized way.
-
-As you can see here, even the history and progress of two rather similar languages can be so different, not to mention more proprietary languages such as Java from Sun/Oracle, C# from Microsoft, OC/Swift from Apple (though the latter was open sourced) or more academia and standardized language like SML and Scheme which both has a standard written in formal semantics.
-
-So it's not not obvious that Haskell, also chose its own unique process to suit its unique goal. Although it backs on academia, it chose a rather practical/less-formal approach to define the language, i.e. the compiler implementation over standardization (plus many "formal" fragments among papers though), which is more like C++/OCaml from this point of view. It has a committee, but instead of being very open and conservative, it's more dictatorial (in terms of average users) and super aggressive in terms of making breaking changes. As a result however, it trained a group of very change-tolerant people in its community...All of these quirks and odds combined works very well and avoid the Haskell "becoming too success too quickly".
-
-
-### End thoughts
-
-To be fair, Haskell has alreay been very "successful" nowdays, in particular academia (for education, sexy type laboratory etc.) but also industry, either being used in real business or being very reputable among programmers (as being both hard and fun).
-
-I am not confident and qualified to say Haskell is success in the right degree at the right time. But it's great to see it, after more than 20 and now almost 30 yrs, slowly figure out its very own way, to "Escape from the Ivory Tower", and keep going beyond.
-
-
+总结:
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.Swagger可以很好的生成接口文档(简明,直观).
+                                           2.Swagger可以部分代替postman对接口进行测试.
+                                           3.在Swagger页面以程序中的swagger注解为准(swagger注解>spring注解).说明:例如你程序中的请求参数@RequestPram(required = false),但是你的swagger的@ApiImplicitParam里面required = true,则swagger接口页面此参数为required.但实际通过postman访问,此参数可以不填.
+                                           4.swagger参数字段注解可以只写name="xxx",value="xxx"标记某字段名字和描述就行了,其他参数可以不写,因为写了也会以程序注解为准.
+                                           5.swagger可以生成PDF等离线文档(百度了下好像也可以生成doc和word).
