--- a/_posts/2018-12-10-swagger2.md
+++ b/_posts/2018-12-10-swagger2.md
@@ -10,29 +10,29 @@ tags:
 ---
 
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在公司的新项目中,大家讨论到花一周的时间写接口文档,这时候我想起了之前在上个公司X总给我介绍的Swagger,
-我一直觉得非常新颖和先进,但是我当时没有机会用,这个没有人用过,我也不熟,后面来了一位新同事,他用过swagger,经<br>过一番讨论,觉得这不是一个比较难的东西,于是我就让同事给我搭出来看一下(因为项目框架是我搭建的,但是swagger2没有引入过.).他搭建出来我看了一下界面,和想象的一样,能自动根据API<br>路由动态生成接口信息以及模拟接口访问(类似于postman的效果).然后我就查了一下搭建过程,这里需要引入两个包,一个sprinfox.swagger2和一个springfox.wwagger.ui(我这边引入的是2.8.0版本 ps:个人一直喜欢用新的,老是觉得新东西界面更美观,兼容性更好).
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;搭建过程:
+我一直觉得非常新颖和先进,但是我当时没有机会用,这个没有人用过,我也不熟,后面来了一位新同事,他用过swagger,经过一番讨论,觉得这不是一个比较难的东西,于是我就让同事给我搭出来看一下(因为项目框架是我搭建的,但是swagger2没有引入过.).他搭建出来我看了一下界面,和想象的一样,能自动根据API路由动态生成接口信息以及模拟接口访问(类似于postman的效果).然后我就查了一下搭建过程,这里需要引入两个包,一个sprinfox.swagger2和一个springfox.wwagger.ui(我这边引入的是2.8.0版本 ps:个人一直喜欢用新的,老是觉得新东西界面更美观,兼容性更好).
+&emsp;搭建过程:
 1.引入jar包
 2.与springboot启动类同级建立swagger配置类,并使用@EnableSwagger2注解标记;这里面包含一些扫描Controller包的路径,一些标题、邮箱、接口信息名称、版本等等.
 3.注解:
   目前主要使用的一些注解有:
    1.@Api(tags = ""):Controller类描述注解.
    2.@ApiOperation(value = " "):api方法描述注解.
-   3.@ApiImplicitParam(name="接受参数名",
-                       paramType="{
-                                   path:(浏览器地址形式取得参数例如(id,对应注解:@PathVariabl)),
-                                   query:(对应注解@RequestParam注解),
-                                   body:(对应@RequestBody注解),)
-                       dataType:参数类型(只作为标志,没有实际校验)
-                       value:对参数的描述
-                       required:是否必填
-                       defultValue:默认值.
+   3.@ApiImplicitParam( name="接受参数名",
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;paramType="{
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;path:(浏览器地址形式取得参数例如(id,对应注解:@PathVariabl)),
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;query:(对应注解@RequestParam注解),
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;body:(对应@RequestBody注解),)
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;dataType:参数类型(只作为标志,没有实际校验)
+D&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;value:对参数的描述
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;required:是否必填
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;defultValue:默认值}.
   4.@ApiModel(注解对象 ps:这个感觉特别好用,我可以注解我的前后端自定义返回实体(DTO),来对它进行描述,开发人员可以在swagger首页看到每个标记对象的意义)
   5.@ApiModelProperty(注解对象属性)
 
 总结:
- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.Swagger可以很好的生成接口文档(简明,直观).
-                                           2.Swagger可以部分代替postman对接口进行测试.
-                                           3.在Swagger页面以程序中的swagger注解为准(swagger注解>spring注解).说明:例如你程序中的请求参数@RequestPram(required = false),但是你的swagger的@ApiImplicitParam里面required = true,则swagger接口页面此参数为required.但实际通过postman访问,此参数可以不填.
-                                           4.swagger参数字段注解可以只写name="xxx",value="xxx"标记某字段名字和描述就行了,其他参数可以不写,因为写了也会以程序注解为准.
-                                           5.swagger可以生成PDF等离线文档(百度了下好像也可以生成doc和word).
+&emsp;&emsp;1.Swagger可以很好的生成接口文档(简明,直观).
+&emsp;&emsp;2.Swagger可以部分代替postman对接口进行测试.
+&emsp;&emsp;3.在Swagger页面以程序中的swagger注解为准(swagger注解>spring注解).说明:例如你程序中的请求参数@RequestPram(required = false),但是你的swagger的@ApiImplicitParam里面required = true,则swagger接口页面此参数为required.但实际通过postman访问,此参数可以不填.
+&emsp;&emsp;4.swagger参数字段注解可以只写name="xxx",value="xxx"标记某字段名字和描述就行了,其他参数可以不写,因为写了也会以程序注解为准.
+&emsp;&emsp;5.swagger可以生成PDF等离线文档(百度了下好像也可以生成doc和word).
