--- a/_posts/2018-12-10-swagger2.md
+++ b/_posts/2018-12-10-swagger2.md
@@ -10,16 +10,14 @@ tags:
 ---
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在公司的新项目中,大家讨论到花一周的时间写接口文档,这时候我想起了之前在上个公司X总给我介绍的Swagger,
-我一直觉得非常新颖和先进,但是我当时没有机会用,这个没有人用过,我也不熟,后面来了一位新同事,他用过swagger,经过一番讨论,觉得这不是一个比较难的东西,于是我就让同事给我搭出来看一下(因为项目框架是我搭建的,但是swagger2没有引入过.).他搭建出来我看了一下界面,和想象的一样,能自动根据API路由动态生成接口信息以及模拟接口访问(类似于postman的效果).然后我就查了一下搭建过程,这里需要引入两个包,一个sprinfox.swagger2和一个springfox.wwagger.ui(我这边引入的是2.8.0版本 ps:个人一直喜欢用新的,老是觉得新东西界面更美观,兼容性更好).
-</p>
-<p>搭建过程:</p>
+我一直觉得非常新颖和先进,但是我当时没有机会用,这个没有人用过,我也不熟,后面来了一位新同事,他用过swagger,经过一番讨论,觉得这不是一个比较难的东西,于是我就让同事给我搭出来看一下(因为项目框架是我搭建的,但是swagger2没有引入过.).他搭建出来我看了一下界面,和想象的一样,能自动根据API路由动态生成接口信息以及模拟接口访问(类似于postman的效果).然后我就查了一下搭建过程,这里需要引入两个包,一个sprinfox.swagger2和一个springfox.wwagger.ui(我这边引入的是2.8.0版本 ps:个人一直喜欢用新的,老是觉得新东西界面更美观,兼容性更好).</p>
+</p>搭建过程:</p>
 <p>1.引入jar包</p>
 <p>2.与springboot启动类同级建立swagger配置类,并使用@EnableSwagger2注解标记;这里面包含一些扫描Controller包的路径,一些标题、邮箱、接口信息名称、版本等等.</p>
 <p>3.注解:
-  目前主要使用的一些注解有:
-   1.@Api(tags = ""):Controller类描述注解.
-   2.@ApiOperation(value = " "):api方法描述注解.
-   3.@ApiImplicitParam(name="接受参数名",
+   (1)@Api(tags = ""):Controller类描述注解.
+   (2)@ApiOperation(value = " "):api方法描述注解.
+   (3)@ApiImplicitParam(name="接受参数名",
                        paramType="{
                                    path:(浏览器地址形式取得参数例如(id,对应注解:@PathVariabl)),
                                    query:(对应注解@RequestParam注解),
@@ -28,9 +26,8 @@ tags:
                        value:对参数的描述
                        required:是否必填
                        defultValue:默认值}.</p>
-  4.@ApiModel(注解对象 ps:这个感觉特别好用,我可以注解我的前后端自定义返回实体(DTO),来对它进行描述,开发人员可以在swagger首页看到每个标记对象的意义)
-  5.@ApiModelProperty(注解对象属性)
-</p>
+  (4)@ApiModel(注解对象 ps:这个感觉特别好用,我可以注解我的前后端自定义返回实体(DTO),来对它进行描述,开发人员可以在swagger首页看到每个标记对象的意义)
+  (5)@ApiModelProperty(注解对象属性)
 <p>总结:</p>
 <p>1.Swagger可以很好的生成接口文档(简明,直观).</p>
 <p>2.Swagger可以部分代替postman对接口进行测试.</p>
