--- a/_posts/2018-12-10-swagger2.md
+++ b/_posts/2018-12-10-swagger2.md
@@ -31,5 +31,5 @@ tags:
 <p>1.Swagger可以很好的生成接口文档(简明,直观).</p>
 <p>2.Swagger可以部分代替postman对接口进行测试.</p>
 <p style="margin:left:3px;">3.在Swagger页面以程序中的swagger注解为准(swagger注解优先于spring注解).说明:例如你程序中的请求参数@RequestPram(required = false),但是你swagger的@ApiImplicitParam里面required = true,则swagger接口页面required.但实际通过postman访问,此参数可以不填.</p>
-<p>4.swagger参数字段注解可以只写name="xxx",value="xxx"标记某字段名字描述就行了,其他参数可以不写,因为写了也会以程序注解为准.</p>
+<p>4.swagger参数字段注解可以只写name="xxx",value="xxx"标记某字段名字描述就行了,其他参数可以不写,因为写了也会以程序注解为</p>
 <p>5.swagger可以生成PDF等离线文档(百度了下好像也可以生成doc和word).</p>
