--- a/_posts/2018-12-10-swagger2.md
+++ b/_posts/2018-12-10-swagger2.md
@@ -15,7 +15,7 @@ tags:
 <p>1.引入jar包</p>
 <p>2.与springboot启动类同级建立swagger配置类,并使用@EnableSwagger2注解标记;这里面包含一些扫描Controller包的路径,一些标题、邮箱、接口信息名称、版本等等.</br>
 <p style=>3.注解:</p>
-<br>(1)@Api(tags = ""):Controller类描述注解.<br>
+<br>(1)@Api(tags = " "):Controller类描述注解.<br>
 <br>(2)@ApiOperation(value = " "):api方法描述注解.<br>
 <br>(3)@ApiImplicitParam(name="接受参数名",<br>
                          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;paramType="{path:(浏览器地址形式取得参数例如(id,对应注:@PathVariabl)),<br>
@@ -24,12 +24,12 @@ tags:
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; dataType:参数类型(只作为标志,没有实际校验)<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; value:对参数的描述}<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; required:是否必填<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; defultValue:默认值.</p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; defaultValue:默认值.
 <p>(4)@ApiModel(注解对象 ps:这个感觉特别好用,我可以注解我的前后端自定义返回实体(DTO),来对它进行描述,开发人员可以在swagger首页看到每个标记对象的意义)<br></p>
 <p>(5)@ApiModelProperty(注解对象属性)</p>
 <p>总结:</p>
 <p>1.Swagger可以很好的生成接口文档(简明,直观).</p>
 <p>2.Swagger可以部分代替postman对接口进行测试.</p>
-<p style="margin:left:3px;">3.在Swagger页面以程序中的swagger注解为准(swagger注解优先于spring注解).说明:例如你程序中的请求参数@RequestPram(required = false),但是你swagger的@ApiImplicitParam里面required = true,则swagger接口页面required.但实际通过postman访问,此参数可以不填.</p>
+<p>3.在Swagger页面以程序中的swagger注解为准(swagger注解优先于spring注解).说明:例如你程序中的请求参数@RequestPram(required = false),但是你swagger的@ApiImplicitParam里面required = true,则swagger接口页面required.但实际通过postman访问,此参数可以不填.</p>
 <p>4.swagger参数字段注解可以只写name="xxx",value="xxx"标记某字段名字描述就行了,其他参数可以不写,因为写了也会以程序注解为</p>
 <p>5.swagger可以生成PDF等离线文档(百度了下好像也可以生成doc和word).</p>
