--- a/_posts/2018-10-21-docker.md
+++ b/_posts/2018-10-21-docker.md
@@ -32,9 +32,9 @@ Update: Docker学习心得
    <p>(7)docker start + "container id" or "container name"启动未运行的指定容器</p>
    <p>(8)docker build(与dockerfile在同一文件夹的情况下):以dockerfile和指定base image编译自己需要的image.</p>
    <p>(9)docker run:将指定image包含在container并启动容器.一些参数:</p>
-&nbsp;&nbsp;&nbsp;&nbsp;<p>1.net=host/bridge/默认 网络模式,主机桥接默认等,可以变向解决docker跨容器通信的问题.</p>
-&nbsp;&nbsp;&nbsp;&nbsp;<p>2.--name 给启动的容器取别名;-p xxxx:nnnn端口映射 xxxx为linux端口,nnnn为docker容器内部端口</p>
-&nbsp;&nbsp;&nbsp;&nbsp;<p>3.-d后台运行,-v目录挂载映射.</p>
+   <p>1.net=host/bridge/默认 网络模式,主机桥接默认等,可以变向解决docker跨容器通信的问题.</p>
+   <p>2.--name 给启动的容器取别名;-p xxxx:nnnn端口映射 xxxx为linux端口,nnnn为docker容器内部端口</p>
+   <p>3.-d后台运行,-v目录挂载映射.</p>
    <p>(10)进入docker容器内部文件夹 docker exec -ti "容器名"bash </p>
 
  <p>总结:Docker容器实际上就是一个linux系统.这一点是我当时需要起一个docker的mysql.但pull下来之后需要创建帐号密码</p>
