版本仓库博客目录

--- a/_posts/2018-12-10-swagger2.md
+++ b/_posts/2018-12-10-swagger2.md
@@ -9,6 +9,10 @@ tags:
   - 接口文档
 ---
 
+Update: Swagger2学习心得
+
+---
+
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在公司的新项目中,大家讨论到花一周的时间写接口文档,这时候我想起了之前在上个公司X总给我介绍的Swagger,
 我一直觉得非常新颖和先进,但是我当时没有机会用,这个没有人用过,我也不熟,后面来了一位新同事,他用过swagger,经过一番讨论,觉得这不是一个比较难的东西,于是我就让同事给我搭出来看一下(因为项目框架是我搭建的,但是swagger2没有引入过.).他搭建出来我看了一下界面,和想象的一样,能自动根据API路由动态生成接口信息以及模拟接口访问(类似于postman的效果).然后我就查了一下搭建过程,这里需要引入两个包,一个sprinfox.swagger2和一个springfox.wwagger.ui(我这边引入的是2.8.0版本 ps:个人一直喜欢用新的,老是觉得新东西界面更美观,兼容性更好).</p>
 <p>搭建过程:<br></p>
