版本仓库博客目录

--- a/_posts/2018-11-16-版本仓库(续).md
+++ b/_posts/2018-11-16-版本仓库(续).md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Gogs搭建心得"
+title: "三大版本仓库对比"
 subtitle: 'Some tips on build version repository'
 author: "FengJiaWen"
 header-style: text
