--- a/_posts/2018-11-15-Gogs.md
+++ b/_posts/2018-11-15-Gogs.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Gogs搭建心得"
-subtitle: 'Some tips on build version repository'
+subtitle: 'Some tips on building version repository'
 author: "FengJiaWen"
 header-style: text
 tags:
