--- a/_posts/2018-11-16-版本仓库(续).md
+++ b/_posts/2018-11-16-版本仓库(续).md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "三大版本仓库对比"
-subtitle: 'Some tips on build version repository'
+subtitle: 'Some tips on building version repository'
 author: "FengJiaWen"
 header-style: text
 tags:
