--- a/_posts/2019-3-29-JVM部分.md
+++ b/_posts/2019-3-29-JVM部分.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Java虚拟机部分知识点总计诶"
+title: "Java虚拟机部分知识点总结"
 subtitle: 'Some tips on leraning JVM'
 author: "FengJiaWen"
 header-style: text
