--- a/_posts/2019-3-29-JVM部分.md
+++ b/_posts/2019-3-29-JVM部分.md
@@ -40,8 +40,8 @@ Update: JVM学习JVM知识小结
 - 对象的创建:
 <p>虚拟机遇到一条new指令时,首先在常量池中检查这个指令的参数是否能定位到一个符号引用,并检查这个符号引用所代表的类是否已经被加载、解析和初始化如果没有,则先执行类加载过程.类加载检查通过后,开始为对象分配内存,对象所需的内存大小在加载完成过后便可以完全确定,为对象分配内存等同于在Java堆中划分出一块内存大小相同的区域.分配完成后虚拟机对对象进行设置(例如是哪个类的实例,对象的hash码,对象的GC分代年龄信息等),最后执行init方法进行初始化.</p>
 <p>对象分配模式一:指针碰撞(堆中内存规整):非空闲区域和空闲区域中间的指针像空闲区域移动等同对象大小的距离.</p>
-<p>对象分配模式二:空闲列表(堆中内存规整):虚拟机维护一个记录哪些内存可用的列表,在分配时就从空闲区域划分出一块等同对象大小的内存区域,并更新列表记录
-- 对象访问的方式</p>
+<p>对象分配模式二:空闲列表(堆中内存规整):虚拟机维护一个记录哪些内存可用的列表,在分配时就从空闲区域划分出一块等同对象大小的内存区域,并更新列表记录</p>
+- 对象访问的方式
 <p>1.句柄:</p>
 <p>Java堆会划分出一块内存来作为句柄池,虚拟机栈上存放的对象引用就是对象的句柄地址(句柄包含了对象的实例数据与类型数据的具体地址信息)</p>
 <p>2.直接指针</p>
@@ -49,5 +49,33 @@ Update: JVM学习JVM知识小结
 <p>比较:</p>
 <p>句柄:虚拟机栈对象引用中存放的是稳定的句柄地址,在对象被移动时只会改变句柄中的对象实例数据指针,而对象对象引用本身无需改变</p>
 <p>直接指针:速度快,节省了一次指针定位的时间开销.</p>
+<p>二、垃圾回收</p>
+<p>(1)判断对象死亡的两种方式</p>
+- 引用计数法
+<p>给对象中添加一个引用计数器,当有地方引用它时,计数器就加1;当引用失效时,计数器就减1.(当计数器为0时可认为对象死亡)</p>
+- 可达性分析算法
+<p>用称为"GC Roots"的对象作为起始点,从这些节点开始向下搜索,搜索所走过的路径成为引用链(当一个对象到"GC Roots"没有任何引用链相连可认为此对象死亡.)</p>
+<p>(2)垃圾回收算法</p>
+- 标记-清除算法
+<p>首先标记需要回收的对象,在标记完成后统一回收所有被标记对象</p>
+- 复制算法
+<p>将可用内存容量等分为两份,每次使用其中的一块.当使用那块内存用完时,就将存活对象复制到另外一半内存,再将之前那半内存全部清理.</p>
+<p>新生代按照8:1:1分为Eden区域、Survivor From和Servivor To区域.当垃圾回收时,将Eden区域和Survivor From区域的存活的对象复制到Survivor To区域,再讲Eden和Survivor清理.当Survovir To空间不够时,需依靠老年代进行分配担保</p>
+- 标记-整理算法
+<p>首先标记需要回收的对象,在标记完成之后让存活的对象都像一端移动,然后清理掉边界意外的内存.</p>
+- 分代收集法
+<p>将Java堆分为新生代和老年代,根据新生代和老年代的特性:新生代每次垃圾收集都有大批对象死去,故用复制算法.而老年代中的对象存活率高,故使用标记-清除算法或标记-整理算法.</p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
 
  
