--- a/_posts/2019-3-29-JVM部分.md
+++ b/_posts/2019-3-29-JVM部分.md
@@ -10,8 +10,7 @@ tags:
   - GC
 ---
 
-Update: JVM学习JVM知识小结
-
+Update: JVM知识小结
 ---
 
 <p>一、Java运行时数据区域</p>
@@ -65,6 +64,42 @@ Update: JVM学习JVM知识小结
 <p>首先标记需要回收的对象,在标记完成之后让存活的对象都像一端移动,然后清理掉边界意外的内存.</p>
 - 分代收集法
 <p>将Java堆分为新生代和老年代,根据新生代和老年代的特性:新生代每次垃圾收集都有大批对象死去,故用复制算法.而老年代中的对象存活率高,故使用标记-清除算法或标记-整理算法.</p>
+<p>(3)垃圾收集器</p>
+- 新生代
+<p>1.Serial收集器</p>
+<p>只用一条线程进行垃圾收集,且收集时暂停其他所有用户线程.(单线程+复制算法)<p>
+<p>2.ParNew收集器</p>
+<p>Serial的多线程版本,且为唯一可以CMS收集器配合的新生代收集器.(多线程+复制算法)<p>
+<p>3.Parallel Scavenge收集器</p>
+<p>"吞吐量优先"收集器(多线程+复制算法)</p>
+- 老年代
+<p>1.Serial Old收集器</p>
+<p>同Serrial暂停所有用户线程.(单线程+标记-整理算法)</p>
+<p>2.Parallel Old收集器</p>
+<p>"吞吐量优先"收集器(多线程+标记-整理算法)</p>
+<p>3.CMS收集器(标记-清除算法)</p>
+<p>流程:①单线程初始标记-②并发标记-③并发重新标记-④并发清理</p>
+<p>特点:</p>
+<p>①对CPU资源非常敏感</p>
+<p>②会产生空间碎片(标记-清除算法);</p>
+<p>③无法处理浮动垃圾(由于并发清理的时候用户线程还在运行,会产生新的垃圾)</p>
+- 不区分年代(Java堆)
+<p>1.G1收集器</p>
+<p>流程:①单线程初始收集-②并发标记-③最终标记-④筛选回收</p>
+<p>特点:</p>
+<p>①并行+并发(充分利用CPU资源).</p>
+<p>②整体上为"标记-整理"算法,局部(Region之间)为复制算法.不会产生空间垃圾.</p>
+<p>③分代收集.</p>
+<p>④可预测停顿.</p>
+<p>(4)Minor GC和Major GC(Full GC)</p>
+<p>①Minor GC:清理新生代(Eden区和Servivor From区)</p>
+<p>②Major GC:清理GC堆</p>
+<p>三、类文件结构</p>
+<p>(1)结构</p>
+<p>魔数、Class文件版本号、常量池、访问标志、类索引(父类索引和接口索引结合)、字段表集合、方法表集合、属性表集合</p>
+<p>①常量池:</p>
+<p>· 字面量:文本字符串和声明为final的常量.</p>
+<p>· 符号引用:类和接口去全限定名、字段和名称的描述符、方法和名称描述符</p>
 <p></p>
 <p></p>
 <p></p>
@@ -77,5 +112,12 @@ Update: JVM学习JVM知识小结
 <p></p>
 <p></p>
 <p></p>
-
- 
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
