--- a/_posts/2019-3-29-JVM部分.md
+++ b/_posts/2019-3-29-JVM部分.md
@@ -96,28 +96,42 @@ Update: JVM知识小结
 <p>②Major GC:清理GC堆</p>
 <p>三、类文件结构</p>
 <p>(1)结构</p>
-<p>魔数、Class文件版本号、常量池、访问标志、类索引(父类索引和接口索引结合)、字段表集合、方法表集合、属性表集合</p>
+<p>魔数、Class文件版本号、常量池、访问标志、类索引(父类索引和接口索引)、字段表集合、方法表集合、属性表集合</p>
 <p>①常量池:</p>
 <p>· 字面量:文本字符串和声明为final的常量.</p>
 <p>· 符号引用:类和接口去全限定名、字段和名称的描述符、方法和名称描述符</p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
+<p>②继承关系</p>
+<p>· 由类索引、父类索引、接口索引三者结合.</p>
+<p>四、JVM类加载机制</p>
+<p>(1)定义</p>
+<p>· 虚拟机把描述类的数据从Class文件加载到内存,并且堆数据进行校验、解析、转换和初始化,最终形成可以被虚拟机直接使用的Java类型.</p>
+<p>(2)类的生命周期</p>
+<p>加载→验证→准备→解析→初始化→使用→卸载(验证、准备、解析成为连接)</p>
+<p>(3)类加载过程</p>
+<p>· 加载→验证→准备→解析→初始化</p>
+<p>加载:</p>
+<p>①通过此类的全限定名获取此类的二进制字节流.</p>
+<p>②将这个字节流所代表的静态存储结构转化为方法区的运行时数据结构.</p>
+<p>③在内存中生成一个代表这个类的java.lang.Class对象,作为方法去这个类的各种数据访问入口.</p>
+<p>验证:</p>
+<p>①目的:确保class文件的字节流包含的信息附和当前虚拟机的要求,并且不会危害虚拟机自身的安全.</p>
+<p>准备:</p>
+<p>①为类变量(静态变量:static修饰)分配内存并设定初始值,这些变量所使用的内存都在方法区进行分配(例如int a = 33;此时值为0)</p>
+<p>· 实例变量在对象实例化时随对象分配在Java堆中.</p>
+<p>· 为0的原因是赋值在初始化阶段执行</p>
+<p>· 如果为static final则此阶段就赋值(例如 static int a = 33;此时值为33)</p>
+<p>解析:</p>
+<p>①虚拟机将常量池内的符号引用替换为直接引用.</p>
+<p>初始化</p>
+<p>①开始真正执行Java代码,静态变量和静态代码块赋值为程序员设置的初始值.</p>
+<p>(4)类加载器</p>
+<p>①定义:虚拟机把"通过一个类的全限定名来描述一个类的二进制字节流"这个动作放到虚拟机外部去实现,以便让程序自己决定去如何获取所需要的类",实现这个动作的代码块称为"类加载器".</p>
+<p>(5)双亲委派模型</p>
+<p>①定义:</p>
+<p>· 过程:</p>
+<p>子类首先检查自己是否被加载过,没有加载则调用父类加载器的loadClass()方法,若父加载器为空则使用顶层启动类加载器作为父加载器.若父加载器加载失败,则抛出ClassNotFountException,再调用子类加载器的findClass()方法进行加载</p>
+<p>· 双亲委派模型要求除了顶层启动类加载器以外的其余加载器都应该有自己的父类加载器.</p>
+<p>· 所有加载请求都会传到顶层启动类加载器.</p>
+<p>②优点:</p>
+<p>· Java类随着它的类加载器一起具备了一种带有优先级的层级关系.</p>
+
