--- a/_posts/2019-3-29-JVM部分.md
+++ b/_posts/2019-3-29-JVM部分.md
@@ -32,7 +32,7 @@ Update: JVM知识小结
 <p>(1)Java堆</p>
 <p>1.存放对象实例,所有对象实例在Java堆分配内存</p>
 <p>2.GC堆:是垃圾回收的主要区域.</p>
-<p>3.划分①:新生代和老年代;②Eden空间、Form Survivor空间、To Survivor空间</p>
+<p>3.划分①:新生代和老年代;②新生代:Eden空间、Form Survivor空间、To Survivor空间</p>
 <p>(2)方法区</p>
 <p>1.存放已被虚拟机加载的类信息、常量、静态变量、编译后的代码数据等.</p>
 <p>2.方法区并不等同与"永久代",只是GC分代收集拓展到了方法区.</p>
