--- a/_posts/2018-12-27-Java8新特性.md
+++ b/_posts/2018-12-27-Java8新特性.md
@@ -34,13 +34,13 @@ Update: Java8新特性学习总结
 </p>一些项目中用到jdk8特性的地方</p>
 
 <p>根据对象集合里面的floorNo字段进行堆集合内容分组:</p>
-<p>        List<devAtmsDTO> devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
-        Map<Long, List<devAtmsDTO>> collect = devAtmDTO.stream().collect(Collectors.groupingBy(devAtmsDTO::getFloorNo, Collectors.toList()));
+<p>        List< devAtmsDTO > devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
+        Map< Long , List< devAtmsDTO >> collect = devAtmDTO.stream().collect(Collectors.groupingBy(devAtmsDTO::getFloorNo, Collectors.toList()));
         return getSuccessResult(collect);</p>
 
 <p>根据floorNo分组同时过滤掉shortNum=0的集合</p>
-<p>        List<devAtmsDTO> devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
-        Map<Long, List<devAtmsDTO>> collect = devAtmDTO.stream().collect(Collectors.groupingBy(devAtmsDTO::getFloorNo, Collectors.toList()));
+<p>        List< devAtmsDTO > devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
+        Map< Long , List< devAtmsDTO >> collect = devAtmDTO.stream().collect(Collectors.groupingBy(devAtmsDTO::getFloorNo, Collectors.toList()));
         return getSuccessResult(collect);</p>
 
 <p>根据enterpriseName分组同时过滤掉hotelName不包含传入字段的对象</p>
@@ -52,12 +52,12 @@ Update: Java8新特性学习总结
                             collect(Collectors.groupingBy(SysHotel::getEnterpriseName, Collectors.toList()));</p> 
 
 <p>Optional:对象不存在时抛出指定异常(避免null出现)</p>
-<p>        Optional<GoodsWarehouse> goodsWarehouse = Optional.ofNullable(goodsWarehouseMapper.findWarehouseById(id));
+<p>        Optional< GoodsWarehouse > goodsWarehouse = Optional.ofNullable(goodsWarehouseMapper.findWarehouseById(id));
         return goodsWarehouse.orElseThrow(() -> new KlgException("查询失败"));</p> 
 
 <p>使用感悟:</p>
 <p>我们刚学习了Optional,可能会迫不及待的如下使用 :
-Optional<User> user = ……
+Optional< User > user = ……
 if (user.isPresent()) {
 return user.getOrders();
 } else {
@@ -70,7 +70,7 @@ return user.getOrders();
 } else {
 return Collections.emptyList();
 }</p>
-<p>那么不得不说我们的思维仍然是在原地踏步, 只是本能的认为它不过是 User 实例的包装, 这与我们之前写成如下是没有任何区别的,所以:**Optional 中我们真正可依赖的应该是除了 isPresent() 和 get() 的其他方法**.例如Optional<T>.orElse()、Optional<T>.orElseGet()、Optional<T>.orElseThrow()Optional<T>.map().xxx</p>
+<p>那么不得不说我们的思维仍然是在原地踏步, 只是本能的认为它不过是 User 实例的包装, 这与我们之前写成如下是没有任何区别的,所以:** Optional中我们真正可依赖的应该是除了isPresent()和get()的其他方法 **.例如Optional< T >.orElse()、Optional< T >.orElseGet()、Optional< T >.orElseThrow()、Optional<T>.map().xxx</p>
 
 
 
