--- a/_posts/2018-12-27-Java8新特性.md
+++ b/_posts/2018-12-27-Java8新特性.md
@@ -70,14 +70,17 @@ return user.getOrders();
 } else {
 return Collections.emptyList();
 }</p>
-<p>那么不得不说我们的思维仍然是在原地踏步, 只是本能的认为它不过是 User 实例的包装, 这与我们之前写成如下是没有任何区别的,所以:** Optional中我们真正可依赖的应该是除了isPresent()和get()的其他方法 **.例如Optional< T >.orElse()、Optional< T >.orElseGet()、Optional< T >.orElseThrow()、Optional< T>.map().xxx   </p>   
-      @GetMapping("/hotel-list")
-      public Result GetHotelList(@RequestParam String unionId,
-                                 @RequestParam(defaultValue = "",required = false) String hotelName) {
-         return weChatAuthorizationService.GetHotelList(unionId,hotelName);
-      }
+<p>那么不得不说我们的思维仍然是在原地踏步, 只是本能的认为它不过是 User 实例的包装, 这与我们之前写成如下是没有任何区别的,所以:** Optional中我们真正可依赖的应该是除了isPresent()和get()的其他方法 **.例如Optional< T >.orElse()、Optional< T >.orElseGet()、Optional< T >.orElseThrow()、Optional< T>.map().xxx</p>   
 
-      @PostMapping("/login")
-      public Result userLogin(@RequestBody LoginDTO loginDTO){
-         return weChatAuthorizationService.userLogin(loginDTO);
-      }
+```java
+    @GetMapping("/hotel-list")
+    public Result GetHotelList(@RequestParam String unionId,
+                               @RequestParam(defaultValue = "",required = false) String hotelName) {
+       return weChatAuthorizationService.GetHotelList(unionId,hotelName);
+    }
+
+    @PostMapping("/login")
+    public Result userLogin(@RequestBody LoginDTO loginDTO){
+        return weChatAuthorizationService.userLogin(loginDTO);
+    }
+```
