--- a/_posts/2018-12-27-Java8新特性.md
+++ b/_posts/2018-12-27-Java8新特性.md
@@ -84,3 +84,16 @@ return Collections.emptyList();
         return weChatAuthorizationService.userLogin(loginDTO);
     }
 ```
+
+```
+@GetMapping("/hotel-list")
+    public Result GetHotelList(@RequestParam String unionId,
+                               @RequestParam(defaultValue = "",required = false) String hotelName) {
+       return weChatAuthorizationService.GetHotelList(unionId,hotelName);
+    }
+
+    @PostMapping("/login")
+    public Result userLogin(@RequestBody LoginDTO loginDTO){
+        return weChatAuthorizationService.userLogin(loginDTO);
+    }
+```
