--- a/_posts/2018-12-27-Java8新特性.md
+++ b/_posts/2018-12-27-Java8新特性.md
@@ -35,9 +35,9 @@ Update: Java8新特性学习总结
 
 <p>根据对象集合里面的floorNo字段进行堆集合内容分组:</p>
 {% highlight java %}
-<p>        List< devAtmsDTO > devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
+List< devAtmsDTO > devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
         Map< Long , List< devAtmsDTO >> collect = devAtmDTO.stream().collect(Collectors.groupingBy(devAtmsDTO::getFloorNo, Collectors.toList()));
-        return getSuccessResult(collect);</p>
+        return getSuccessResult(collect);
 {% endhighlight %}
 <p>根据floorNo分组同时过滤掉shortNum=0的集合</p>
 {% highlight java %}
