--- a/_posts/2018-12-27-Java8新特性.md
+++ b/_posts/2018-12-27-Java8新特性.md
@@ -35,14 +35,14 @@ Update: Java8新特性学习总结
 
 <p>根据对象集合里面的floorNo字段对集合内容分组:</p>
 {% highlight java %}
-List< devAtmsDTO > devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
+List<devAtmsDTO> devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
         Map< Long , List< devAtmsDTO >> collect = devAtmDTO.stream().collect(Collectors.groupingBy(devAtmsDTO::getFloorNo, Collectors.toList()));
         return getSuccessResult(collect);
 {% endhighlight %}
 <p>根据floorNo分组同时过滤掉shortNum=0的集合</p>
 {% highlight java %}
-List< devAtmsDTO > devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
-        Map< Long , List< devAtmsDTO >> collect = devAtmDTO.stream().collect(Collectors.groupingBy(devAtmsDTO::getFloorNo, Collectors.toList()));
+List<devAtmsDTO> devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
+        Map<Long, List<devAtmsDTO>> collect = devAtmDTO.stream().collect(Collectors.groupingBy(devAtmsDTO::getFloorNo, Collectors.toList()));
         return getSuccessResult(collect);
 {% endhighlight %}
 <p>根据enterpriseName分组同时过滤掉hotelName不包含传入字段的对象</p>
@@ -57,20 +57,20 @@ collect = hotels.stream().filter(s -> s.getHotelName().contains(hotelName)).
 {% endhighlight %}
 <p>Optional:对象不存在时抛出指定异常(避免null出现)</p>
 {% highlight java %}
-Optional< GoodsWarehouse > goodsWarehouse = Optional.ofNullable(goodsWarehouseMapper.findWarehouseById(id));
+Optional<GoodsWarehouse> goodsWarehouse = Optional.ofNullable(goodsWarehouseMapper.findWarehouseById(id));
         return goodsWarehouse.orElseThrow(() -> new KlgException("查询失败"));
 {% endhighlight %}
 <p>使用感悟:</p>
 <p>我们刚学习了Optional,可能会迫不及待的如下使用 :
 {% highlight java %}
-Optional< User > user = ……
+Optional<User> user = ...
 if (user.isPresent()) {
 return user.getOrders();
 } else {
 return Collections.emptyList();
 }
 
-User user = …..
+User user = ...
 if (user != null) {
 return user.getOrders();
 } else {
@@ -79,7 +79,7 @@ return Collections.emptyList();
 {% endhighlight %}
 <p>那么不得不说我们的思维仍然是在原地踏步, 只是本能的认为它不过是 User 实例的包装, 这与我们之前写成如下是没有任何区别的,所以:** Optional中我们真正可依赖的应该是除了isPresent()和get()的其他方法 **.例如Optional< T >.orElse()、Optional< T >.orElseGet()、Optional< T >.orElseThrow()、Optional< T>.map().xxx</p>   
 {% highlight java %}
-@GetMapping("/hotel-list")
+    @GetMapping("/hotel-list")
     public Result GetHotelList(@RequestParam String unionId,
                                @RequestParam(defaultValue = "",required = false) String hotelName) {
        return weChatAuthorizationService.GetHotelList(unionId,hotelName);
@@ -92,7 +92,7 @@ return Collections.emptyList();
 {% endhighlight %}
 
 {% highlight java %}
-@GetMapping("/hotel-list")
+    @GetMapping("/hotel-list")
     public Result GetHotelList(@RequestParam String unionId,
                                @RequestParam(defaultValue = "",required = false) String hotelName) {
        return weChatAuthorizationService.GetHotelList(unionId,hotelName);
