--- a/_posts/2018-12-27-Java8新特性.md
+++ b/_posts/2018-12-27-Java8新特性.md
@@ -47,12 +47,12 @@ List<devAtmsDTO> devAtmDTO = machineListService.findWeChatMachineList(hotelId, l
 {% endhighlight %}
 <p>根据enterpriseName分组同时过滤掉hotelName不包含传入字段的对象</p>
 {% highlight java %}
-collect = hotels.stream().filter(s -> s.getHotelName().contains(hotelName)).
+Map<String, List<SysHotel>> collect = hotels.stream().filter(s -> s.getHotelName().contains(hotelName)).
                             collect(Collectors.groupingBy(SysHotel::getEnterpriseName, Collectors.toList())); 
 {% endhighlight %}
 <p>Optional:当里面对象存在时取出SysUid,不存在赋值"0L"(避免null出现)</p>
 {% highlight java %}
-collect = hotels.stream().filter(s -> s.getHotelName().contains(hotelName)).
+Map<String, List<SysHotel>> collect = hotels.stream().filter(s -> s.getHotelName().contains(hotelName)).
                             collect(Collectors.groupingBy(SysHotel::getEnterpriseName, Collectors.toList()));
 {% endhighlight %}
 <p>Optional:对象不存在时抛出指定异常(避免null出现)</p>
