--- a/_posts/2018-12-27-Java8新特性.md
+++ b/_posts/2018-12-27-Java8新特性.md
@@ -52,8 +52,7 @@ Map<String, List<SysHotel>> collect = hotels.stream().filter(s -> s.getHotelName
 {% endhighlight %}
 <p>Optional:当里面对象存在时取出SysUid,不存在赋值"0L"(避免null出现)</p>
 {% highlight java %}
-Map<String, List<SysHotel>> collect = hotels.stream().filter(s -> s.getHotelName().contains(hotelName)).
-                            collect(Collectors.groupingBy(SysHotel::getEnterpriseName, Collectors.toList()));
+Long sysUid = weChatUser.map(WechatUser::getSysUid).orElse(0L);
 {% endhighlight %}
 <p>Optional:对象不存在时抛出指定异常(避免null出现)</p>
 {% highlight java %}
