--- a/_posts/2018-12-27-Java8新特性.md
+++ b/_posts/2018-12-27-Java8新特性.md
@@ -60,7 +60,7 @@ Optional<GoodsWarehouse> goodsWarehouse = Optional.ofNullable(goodsWarehouseMapp
         return goodsWarehouse.orElseThrow(() -> new KlgException("查询失败"));
 {% endhighlight %}
 <p>使用感悟:</p>
-<p>我们刚学习了Optional,可能会迫不及待的如下使用 :</p>
+<p>我们刚学习了Optional,可能会迫不及待的如下使用 :
 {% highlight java %}
 Optional<User> user = ...
 if (user.isPresent()) {
@@ -76,6 +76,7 @@ return user.getOrders();
 return Collections.emptyList();
 }
 {% endhighlight %}
+
 <p>那么不得不说我们的思维仍然是在原地踏步, 只是本能的认为它不过是 User 实例的包装, 这与我们之前写成如下是没有任何区别的,所以:Optional中我们真正可依赖的应该是除了isPresent()和get()的其他方法.例如Optional<T>.orElse()、Optional<T>.orElseGet()、Optional<T>.orElseThrow()、Optional<T>.map().xxx</p>
 
 <p>ps:为了代码保留格式高亮是真的坑大(Github的Markdown语法和jekyll Markdown语法)</p>
