--- a/_posts/2018-12-27-Java8新特性.md
+++ b/_posts/2018-12-27-Java8新特性.md
@@ -60,7 +60,7 @@ Optional<GoodsWarehouse> goodsWarehouse = Optional.ofNullable(goodsWarehouseMapp
         return goodsWarehouse.orElseThrow(() -> new KlgException("查询失败"));
 {% endhighlight %}
 <p>使用感悟:</p>
-<p>我们刚学习了Optional,可能会迫不及待的如下使用 :
+<p>我们刚学习了Optional,可能会迫不及待的如下使用 :</p>
 {% highlight java %}
 Optional<User> user = ...
 if (user.isPresent()) {
