--- a/_posts/2018-12-27-Java8新特性.md
+++ b/_posts/2018-12-27-Java8新特性.md
@@ -36,13 +36,14 @@ Update: Java8新特性学习总结
 <p>根据对象集合里面的floorNo字段对集合内容分组:</p>
 {% highlight java %}
 List<devAtmsDTO> devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
-        Map< Long , List< devAtmsDTO >> collect = devAtmDTO.stream().collect(Collectors.groupingBy(devAtmsDTO::getFloorNo, Collectors.toList()));
+        Map<Long , List<devAtmsDTO>> collect = devAtmDTO.stream().collect(Collectors.groupingBy(devAtmsDTO::getFloorNo, Collectors.toList()));
         return getSuccessResult(collect);
 {% endhighlight %}
-<p>根据floorNo分组同时过滤掉shortNum=0的集合</p>
+<p>根据floorNo分组同时过滤掉shortNum不为0的集合</p>
 {% highlight java %}
-List<devAtmsDTO> devAtmDTO = machineListService.findWeChatMachineList(hotelId, location, atmNo);
-        Map<Long, List<devAtmsDTO>> collect = devAtmDTO.stream().collect(Collectors.groupingBy(devAtmsDTO::getFloorNo, Collectors.toList()));
+        Map<Long, List<StockOutDTO>> collect =
+                stockOutDTOS.stream().filter(n -> n.getShortNum() != 0).collect(Collectors.groupingBy(StockOutDTO::getFloorNo,
+                        Collectors.toList()));
         return getSuccessResult(collect);
 {% endhighlight %}
 <p>根据enterpriseName分组同时过滤掉hotelName不包含传入字段的对象</p>
@@ -78,5 +79,3 @@ return Collections.emptyList();
 {% endhighlight %}
 
 <p>那么不得不说我们的思维仍然是在原地踏步, 只是本能的认为它不过是 User 实例的包装, 这与我们之前写成如下是没有任何区别的,所以:Optional中我们真正可依赖的应该是除了isPresent()和get()的其他方法.例如Optional<T>.orElse()、Optional<T>.orElseGet()、Optional<T>.orElseThrow()、Optional<T>.map().xxx</p>
-
-<p>ps:为了代码保留格式高亮是真的坑大(Github的Markdown语法和jekyll Markdown语法)</p>
