--- a/_posts/2019-3-29-JVM部分.md
+++ b/_posts/2019-3-29-JVM部分.md
@@ -40,7 +40,7 @@ Update: JVM知识小结
 - 对象的创建:
 <p>虚拟机遇到一条new指令时,首先在常量池中检查这个指令的参数是否能定位到一个符号引用,并检查这个符号引用所代表的类是否已经被加载、解析和初始化如果没有,则先执行类加载过程.类加载检查通过后,开始为对象分配内存,对象所需的内存大小在加载完成过后便可以完全确定,为对象分配内存等同于在Java堆中划分出一块内存大小相同的区域.分配完成后虚拟机对对象进行设置(例如是哪个类的实例,对象的hash码,对象的GC分代年龄信息等),最后执行init方法进行初始化.</p>
 <p>对象分配模式一:指针碰撞(堆中内存规整):非空闲区域和空闲区域中间的指针像空闲区域移动等同对象大小的距离.</p>
-<p>对象分配模式二:空闲列表(堆中内存规整):虚拟机维护一个记录哪些内存可用的列表,在分配时就从空闲区域划分出一块等同对象大小的内存区域,并更新列表记录</p>
+<p>对象分配模式二:空闲列表(堆中内存不规整):虚拟机维护一个记录哪些内存可用的列表,在分配时就从空闲区域划分出一块等同对象大小的内存区域,并更新列表记录</p>
 - 对象访问的方式
 <p>1.句柄:</p>
 <p>Java堆会划分出一块内存来作为句柄池,虚拟机栈上存放的对象引用就是对象的句柄地址(句柄包含了对象的实例数据与类型数据的具体地址信息)</p>
