--- a/_posts/2019-3-29-JVM部分.md
+++ b/_posts/2019-3-29-JVM部分.md
@@ -105,7 +105,7 @@ Update: JVM知识小结
 <p>· 由类索引、父类索引、接口索引三者结合.</p>
 <p>四、JVM类加载机制</p>
 <p>(1)定义</p>
-<p>· 虚拟机把描述类的数据从Class文件加载到内存,并且堆数据进行校验、解析、转换和初始化,最终形成可以被虚拟机直接使用的Java类型.</p>
+<p>· 虚拟机把描述类的数据从Class文件加载到内存,并且对数据进行校验、解析、转换和初始化,最终形成可以被虚拟机直接使用的Java类型.</p>
 <p>(2)类的生命周期</p>
 <p>加载→验证→准备→解析→初始化→使用→卸载(验证、准备、解析成为连接)</p>
 <p>(3)类加载过程</p>
